--- a/6/6.3/Dockerfile
+++ b/6/6.3/Dockerfile
@@ -103,6 +103,8 @@ VOLUME /usr/share/elasticsearch/data
 
 COPY docker-entrypoint.sh /
 
+RUN elasticsearch-plugin install analysis-kuromoji
+
 EXPOSE 9200 9300
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["elasticsearch"]
